Fix foreground/background swatches overflowing border

--- a/pixie.css
+++ b/pixie.css
@@ -748,6 +748,7 @@ button::-moz-focus-inner {
   border: 1px solid rgba(204, 204, 204, .8);
   box-shadow: inset 0 0 0 1px rgba(204, 204, 204, .8);
   border-radius: 4px;
+  background-clip: padding-box;
 }
 .color-picker-color.background {
   top: 16px;
